# Epoxy-Segmentation

./: .gitignore  1_Preprocess.py  2_Tiling.py  3_Train DeepLab.md  3_Train FCN.md  3_Train.md  4_Inference Tiling.py  5_Inference.py  README.md  paths.py  pyproject.toml
helpers/: constants.py
