[project]
name = "epoxy_segmentation"
version = "1.0.0"
description = "Segmentation of Carbon Fiber-Epoxy composite microstructure images using deep learning."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "dragon-ml-toolbox[ml]==22.18.1",
]

[dependency-groups]
dev = [
    "jupytext>=1.19.1",
]

# Jupytext configuration
[tool.jupytext]
formats = "ipynb,md"
